--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/Aimpexx"
+    "url": "https://github.com/Aimpexx"
   },
   "license": "ISC",
   "author": "crown",
