--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "https://fatadde.github.io/AIMPEXX"
+    "url": "https://aimpexx.com"
   },
   "license": "ISC",
   "author": "crown",
