--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "https://aimpexx.com"
+    "url": "http://aimpexx.com/"
   },
   "license": "ISC",
   "author": "crown",
